- Added table header for state view - :bugs: Fixed % should be in same line and without decimal. - :bugs: Fixed Center align chart legend - :bugs: Fixed Message should be show -Data not available - :bugs: Fixed Total should be mention after other income.

--- a/src/app/auth/home/home-tab-view/home-tab-view.component.scss
+++ b/src/app/auth/home/home-tab-view/home-tab-view.component.scss
@@ -13,7 +13,7 @@
 
 
   .modal-uq {
-    min-width: 70vw !important;
+    min-width: 80vw !important;
   }
 
   .countplaceholder, .c-token {
@@ -34,6 +34,13 @@
 .table-responsive {
   max-height: 50vh;
   overflow: auto;
+
+}
+
+#table {
+  th:last-child {
+    width: 100px;
+  }
 }
 
 // Scroll Bar UI Starts here
